移动端页面，首页滚动，上拉加载，下拉刷新

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
+    <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
+    <script type="text/javascript" src="https://wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.2.0"></script>
     <!-- <script src="./rem_control.js"></script> -->
 </head>
 
@@ -19,5 +22,10 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 </body>
+
+<script>
+    // 调试专用，vconsole
+    const vConsole = new VConsole();
+</script>
 
 </html>
